--- a/posSystem/posSystem.csproj
+++ b/posSystem/posSystem.csproj
@@ -16,4 +16,10 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Content Update="Views\Shared\_LayoutLogin.cshtml">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
 </Project>
