--- a/posSystemWindows/posSystemWindows.csproj
+++ b/posSystemWindows/posSystemWindows.csproj
@@ -14,6 +14,9 @@
 		<PackageReference Include="Dapper" Version="2.1.35" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+		<PackageReference Include="NLog" Version="5.3.2" />
+		<PackageReference Include="NLog.Config" Version="4.7.15" />
+		<PackageReference Include="NLog.Schema" Version="5.3.2" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
 	</ItemGroup>
 
