--- a/posSystem/appsettings.json
+++ b/posSystem/appsettings.json
@@ -8,11 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=posDB;User Id=sa;Password=admin123!@#;TrustServerCertificate=True"
-    //"DefaultConnection": "Data Source=SQL8006.site4now.net;Initial Catalog=db_aaaeb1_posdb;User Id=db_aaaeb1_posdb_admin;Password=admin@123;TrustServerCertificate=True"
+    //"DefaultConnection": "Data Source=sql8005.site4now.net;Initial Catalog=db_aaaeb1_posdb;User Id=db_aaaeb1_posdb_admin;Password=admin@123;TrustServerCertificate=True"
 
     //"DefaultConnection": "Server=https://win8144.site4now.net:1433/msdeploy.axd?site=alexcho-001-site1;Database=db_aaaeb1_posdb;User Id=db_aaaeb1_posdb_admin;Password=admin@123;TrustServerCertificate=True;"
-
-
 
   }
 }
