log and try catach

--- a/posSystem/appsettings.json
+++ b/posSystem/appsettings.json
@@ -3,14 +3,18 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "File": {
+      "Path": "Logs/log-.txt",
+      "RollingInterval": "Day",
+      "FileSizeLimitBytes": 10485760, // 10 MB
+      "RetainedFileCountLimit": 7 // Retain logs for 7 days
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=posDB;User Id=sa;Password=admin123!@#;TrustServerCertificate=True"
     //"DefaultConnection": "Data Source=sql8005.site4now.net;Initial Catalog=db_aaaeb1_posdb;User Id=db_aaaeb1_posdb_admin;Password=admin@123;TrustServerCertificate=True"
-
     //"DefaultConnection": "Server=https://win8144.site4now.net:1433/msdeploy.axd?site=alexcho-001-site1;Database=db_aaaeb1_posdb;User Id=db_aaaeb1_posdb_admin;Password=admin@123;TrustServerCertificate=True;"
-
   }
 }
