--- a/posSystem/posSystem.csproj
+++ b/posSystem/posSystem.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -42,6 +42,10 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="EPPlus" Version="7.2.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
@@ -56,6 +60,7 @@
 	  </Content>
 	</ItemGroup>
 	<ItemGroup>
+	  <Folder Include="Migrations\" />
 	  <Folder Include="wwwroot\staffimages\" />
 	</ItemGroup>
 </Project>
